# chat

./: .gitignore  README.md
server/dotnet/: .gitignore  README.md
server/dotnet/server/: Server.cs  server.sln
server/dotnet/tcpclient/: TCPClient.cs
server/go/: Makefile  README.md  coverage.txt  go.mod  go.sum
server/go/chat/: constants.go  impl_protocol.go  impl_protocol_test.go  pkg_suite_test.go  utils.go  wire_formatting.go  wire_io.go
server/go/internal/: protocol_def.go
server/go/pkg/: constants.go  impl_protocol.go  impl_protocol_test.go  protocol.go  protocol_test.go  tcp_server.go  tcp_server_test.go  wire_formatting.go  wire_io.go
server/go/tcp_client/: chat_client.go
server/go/tcp_server/: events.go  tcp_server.go  tcp_server_suite_test.go  tcp_server_test.go  users.go
server/nodejs/: README.md  package-lock.json  protocol.mjs  server.mjs  utils.mjs
server/python/: README.md  client.py  main.py  protocol.py  server.py  wire_formatting.py
server/python/source/: __init__.py  exceptions.py  handle_client_message.py  login.py  message.py  message_handler.py  protocol.py  server.py  users.py  wire_formatting.py
server/python/tests/: test_client.py  test_exceptions.py  test_message.py  test_message_handler.py  test_server.py  test_users.py  test_wire_formatting.py
server/rust/: Cargo.toml  README.md
server/rust/src/: lib.rs  login.rs  main.rs  message.rs  response.rs  tcp_server.rs  types.rs
server/rust/src/codec/: decoder.rs  encoder.rs  mod.rs
server/rust/src/commands/: login.rs  mod.rs
server/rust/src/response/: response.rs
(+10 files in other folders)
