[package]
name = "tcp-chat-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "*", features = ["full"] }
femme = { version = "*" }
log = { version = "*" }
r3bl_tui = { version = "*" }
r3bl_rs_utils_core = { version = "*" }
time = {version = "0.3.36"}
bytes = "1.8.0"
byteorder = "1.5.0"
dashmap = "6.1.0"